# dbs-vector

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  config.yaml  config.yaml.example  config.yml.example  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  README_API.md  README_ARCHITECTURE.md  README_DOCS.md  README_MCP.md  README_REMOTE_SQL_API.md  README_SQL.md  README_WORKFLOW.md  README_duckdb.md
scripts/: README.md  check_remote_api.py
src/dbs_vector/: __init__.py  cli.py  config.py  logger.py
src/dbs_vector/api/: main.py  mcp_server.py  state.py
src/dbs_vector/core/: models.py  ports.py  registry.py
src/dbs_vector/infrastructure/chunking/: api.py  document.py  duckdb.py  sql.py
src/dbs_vector/infrastructure/embeddings/: mlx_engine.py
src/dbs_vector/infrastructure/storage/: lancedb_engine.py  mappers.py
src/dbs_vector/services/: .ingestion.py.swp  ingestion.py  search.py
tests/: conftest.py
tests/integration/: test_api.py  test_cli.py  test_ingestion.py
tests/unit/: test_api_chunker.py  test_chunker.py  test_config.py  test_duckdb_chunker.py  test_lancedb_engine.py  test_mappers.py  test_mlx_engine.py  test_registry.py  test_search_service.py  test_sql_chunker.py
tests/unit/api/: test_mcp_server.py
